--- a/helm/vault-agent-auto-inject-webhook/values.yaml
+++ b/helm/vault-agent-auto-inject-webhook/values.yaml
@@ -27,6 +27,8 @@ flags:
   gomplateImage: hairyhenderson/gomplate:v3
   # flags.kubernetesAuthPath -- The value to be set on the `-kubernetes-auth-path` flag.
   kubernetesAuthPath: auth/kubernetes
+  # flags.vaultImageName -- The value to be set on the `-vault-image-name` flag.
+  vaultImageName: vault
   # flags.vaultImageVersion -- The value to be set on the `-vault-image-version` flag.
   vaultImageVersion: 1.4.0
   # flags.defaultConfigMapName -- The value to be set on the `-default-config-map-name` flag.
@@ -49,6 +51,8 @@ flags:
 
 # replicas -- The number of replicas of the webhook to run.
 replicas: 3
+# imageName -- The image used for the webhook.
+imageName: patoarvizu/vault-agent-auto-inject-webhook
 # imageVersion -- The image version used for the webhook.
 imageVersion: v0.5.0
 # imagePullPolicy -- The imagePullPolicy to be used on the webhook.
